# ErSlice

./: .gitignore  .prettierignore  .prettierrc.json  A+級系統完整性檢查報告.md  BRAND.md  BRAND_ASSETS.md  DATABASE_EVALUATION.md  DEVELOPMENT_LOG.md  README.md  SITEMAP_FEATURES.md  SKETCH_GENERATOR_README.md  TODO.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.build.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: checks.yml  release.yml
docs/: API_REFERENCE.md  BUTTON_SYSTEM_GUIDE.md  COMPONENT_LIBRARY.md  DATA_INTERFACE_IMPLEMENTATION.md  DYNAMIC_PORT_GUIDE.md  ERSLICE_SKETCH_GENERATOR_GUIDE.md  ERSLICE_UI_UX_IMPLEMENTATION_GUIDE.md  FRONTEND_INTERFACE_GUIDE.md  FRONTEND_STYLE_GUIDE.md  LAYOUT_COMPONENTS_IMPLEMENTATION.md  README.md  SKETCH_IMPLEMENTATION_PLAN.md  TESTING_GUIDE.md
docs/research/: ai-driven-development-best-practices.md
figma-to-code-research/: BIDIRECTIONAL_FIGMA_ECOSYSTEM_RESEARCH.md  DETAILED_SITEMAP_SPEC.md  ERSLICE_TECHNICAL_ARCHITECTURE_GUIDE.md  FIGMA_INTEGRATION_SPEC.md  FIGMA_TO_CODE_DEEP_RESEARCH.md  FRONTEND_CODEGEN_ARCHITECTURE_RESEARCH.md  README.md  REFERENCE_PROJECTS_DEEP_ANALYSIS.md
scripts/: dev-server.js
src/: App.js  App.tsx  index.css  main.js  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  database.rs  lib.rs  main.rs
src/components/: BatchOperationsPanel.tsx  DataMigrationModal.tsx  DataRepairPanel.tsx  DataValidationPanel.tsx  FigmaExportOptions.tsx  FigmaImporter.tsx  Header.js  Header.tsx  (+12 more)
(+94 files in other folders)
