[package]
name = "erslice"
version = "1.0.0"
description = "ErSlice - ErAI 家族的前端開發工具與組件庫系統"
authors = ["ErAI <erai@erai.com>"]
license = "MIT"
repository = "https://github.com/erich/ErSlice"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "erslice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
rusqlite = { version = "0.31", features = ["bundled", "chrono", "serde_json"] }
anyhow = "1.0"
dirs = "5.0"
